--- a/WebContent/autor.xhtml
+++ b/WebContent/autor.xhtml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core">
 
 	<h:body>
 		<h1>Novo Autor</h1>
-		<h:form>
+		<h:form id="autor">
 			<fieldset>
 				<legend>Dados do Autor</legend>
-				<h:panelGrid columns="2">
+				<h:panelGrid columns="3">
 					<h:outputLabel value="Nome:" for="nome" />
-					<h:inputText id="nome" value="#{autorBean.autor.nome}" />
+					<h:inputText id="nome" value="#{autorBean.autor.nome}"
+						required="true" requiredMessage="O nome do autor deve ter no mínimo 5 caracteres" validatorMessage="O nome do autor deve ter no mínimo 5 caracteres">
+						<f:validateLength minimum="5" />
+					</h:inputText>
+					<h:message for="nome" />
 					<h:commandButton value="Gravar" action="#{autorBean.gravar}" />
 				</h:panelGrid>
 			</fieldset>
