--- a/WebContent/_template.xhtml
+++ b/WebContent/_template.xhtml
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <h:head />
 
@@ -19,7 +19,7 @@
 	</div>
 	<div id="rodape">
 		<ui:insert name="rodape"></ui:insert>
-		copyright 2017
+			Copyright 2017
 	</div>
 </h:body>
 </html>
