--- a/WebContent/autor.xhtml
+++ b/WebContent/autor.xhtml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 
 
 <ui:composition template="_template.xhtml">
+	<!-- passando parametro do ID na URL  -->
+	<f:metadata>
+		<f:viewParam name="autorId" value="#{autorBean.autorId}"/>
+		<f:viewAction action="#{autorBean.carregarAutorPeloId}" if="#{param.autorId != null}"/>
+	</f:metadata>
+
 	<ui:define name="titulo">
 			Novo Autor
 		</ui:define>
@@ -25,6 +31,13 @@
 						<f:validateLength minimum="5" />
 					</h:inputText>
 					<h:message for="nome" />
+					
+					<h:outputLabel value="Email:" for="email" />
+					<h:inputText id="email" value="#{autorBean.autor.email}" required="true">
+						<f:passThroughAttribute name="type" value="email"></f:passThroughAttribute> <!-- serve para dar suporte ao HTML5, alterando valores do atributo  -->
+					</h:inputText>
+					
+					<h:message for="email" />
 					<h:commandButton value="Gravar" action="#{autorBean.gravar}" />
 					<br />
 					<h:commandLink value="Adicionar livro"
