--- a/WebContent/_template.xhtml
+++ b/WebContent/_template.xhtml
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <h:head />
@@ -18,7 +19,7 @@
 		<h:outputText
 			value="Você está logado como: #{sessionScope['usuarioLogado'].email}" />
 		<br/>
-		<h:commandLink value="Logout" action="#{loginBean.efetuaLogout}"></h:commandLink>
+		<p:commandButton value="Logout" action="#{loginBean.efetuaLogout}" ></p:commandButton>
 		
 	</h:form>
 	<br/>
