--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -98,46 +98,46 @@
 		<h:form id="tabelaDeLivros">
 		<br />
 			
-				<h:dataTable id="tabelaLivros" value="#{livroBean.livros}"
-					var="livro">
-					<h:column>
-						<f:facet name="header">Título</f:facet>
+				<p:dataTable id="tabelaLivros" value="#{livroBean.livros}"
+					var="livro" paginator= "true" rows="5">
+					<!--o atributo headerText subtitui o f:facet  -->
+					<f:facet name="header">Livros</f:facet>
+					
+					<!-- Existem outros MatchModes como endsWidth, contains, exact, equals, lte (menos ou igual) e gte (maior ou igual)  -->
+					<p:column headerText="titulo" sortBy="#{livro.titulo}" filterBy="#{livro.titulo}" filterMatchMode="contains" >
 						<h:outputText value="#{livro.titulo}" />
-					</h:column>
+					</p:column>
 
-					<h:column>
-						<f:facet name="header">ISBN</f:facet>
+					<p:column headerText="ISBN" sortBy="#{livro.isbn}" filterBy="#{livro.isbn}" filterMatchMode="contains" >
 						<h:outputText value="#{livro.isbn}" />
-					</h:column>
+					</p:column>
 
-					<h:column>
-						<f:facet name="header">Preço</f:facet>
+					<p:column headerText="titulo" sortBy="#{livro.preco}" filterBy="#{livro.preco}" filterMatchMode="StartWish" >
 						<h:outputText value="#{livro.preco}">
 							<f:convertNumber type="currenty" pattern="R$ 0.00"
 								currencySymbol="R$" locale="pt_BR" />
 						</h:outputText>
-					</h:column>
-
-					<h:column>
+					</p:column>
+					<p:column>
 						<f:facet name="header">Data</f:facet>
 						<h:outputText value="#{livro.dataLancamento.time}">
 							<f:convertDateTime pattern="dd/MM/yyy HH:mm" />
 							<!-- timeZone="America/Sao_Paulo" -->
 						</h:outputText>
-					</h:column>
+					</p:column>
 					<!--CARREGANDO DADOS PARA O TEXT BOX E PERMITE ALTERAÇÂO  -->
-					<h:column>
+					<p:column>
 						<f:facet name="header">Alterar</f:facet>
 						<h:commandLink value="Alterar">
 							<f:setPropertyActionListener target="#{livroBean.livro}" value="#{livro}" /> <!-- esta tag  -->
 						</h:commandLink>
-					</h:column>
+					</p:column>
 					<!--EFETUA REMOÇÃO DO LIVRO  -->
-					<h:column>
+					<p:column  >
 						<f:facet name="header">Remover</f:facet>
 						<h:commandLink value="remove" action="#{livroBean.remover(livro)}"></h:commandLink>
-					</h:column>
-				</h:dataTable>
+					</p:column>
+				</p:dataTable>
 			
 		</h:form>
 	</ui:define>
