--- a/WebContent/livro.xhtml
+++ b/WebContent/livro.xhtml
@@ -104,7 +104,7 @@
 					<f:facet name="header">Livros</f:facet>
 					
 					<!-- Existem outros MatchModes como endsWidth, contains, exact, equals, lte (menos ou igual) e gte (maior ou igual)  -->
-					<p:column headerText="titulo" sortBy="#{livro.titulo}" filterBy="#{livro.titulo}" filterMatchMode="contains" >
+					<p:column headerText="Titulo" sortBy="#{livro.titulo}" filterBy="#{livro.titulo}" filterMatchMode="contains" >
 						<h:outputText value="#{livro.titulo}" />
 					</p:column>
 
@@ -112,14 +112,13 @@
 						<h:outputText value="#{livro.isbn}" />
 					</p:column>
 
-					<p:column headerText="titulo" sortBy="#{livro.preco}" filterBy="#{livro.preco}" filterMatchMode="StartWish" >
+					<p:column headerText="Preço" sortBy="#{livro.preco}" filterBy="#{livro.preco}" filterFunction="#{livroBean.precoEhMenor}" >
 						<h:outputText value="#{livro.preco}">
 							<f:convertNumber type="currenty" pattern="R$ 0.00"
 								currencySymbol="R$" locale="pt_BR" />
 						</h:outputText>
 					</p:column>
-					<p:column>
-						<f:facet name="header">Data</f:facet>
+					<p:column headerText="Data" sortBy="#{livro.dataLancamento.time}" filterBy="#{livro.dataLancamento.time}" filterMatchMode="contains">
 						<h:outputText value="#{livro.dataLancamento.time}">
 							<f:convertDateTime pattern="dd/MM/yyy HH:mm" />
 							<!-- timeZone="America/Sao_Paulo" -->
