--- a/WebContent/_template.xhtml
+++ b/WebContent/_template.xhtml
@@ -8,7 +8,16 @@
 
 <h:body>
 	<div id="cabecalho">
+		<p:panelGrid columns="1" >
 		<h:graphicImage library="img" name="logo.png" />
+		<h:form rendered="#{usuarioLogado != null}" style="position: absolute; right: 10px;">
+		<p:themeSwitcher id="basic" style="width:165px" value="#{temaBean.tema}">
+		    <f:selectItem itemLabel="Escolha um tema" itemValue="" />
+		    <f:selectItems value="#{temaBean.temas}" var="tema" itemLabel="#{tema}" itemValue="#{tema}" />
+		    <f:ajax />
+		</p:themeSwitcher>
+		</h:form>
+		</p:panelGrid>
 		<h1>
 			<ui:insert name="titulo"></ui:insert>
 		</h1>
@@ -22,12 +31,13 @@
 		        <p:menuitem  value="Home"  action="carousel?faces-redirect=true"    icon="fa fa-home"/>
 		        <p:menuitem  value="Livro"  action="livro?faces-redirect=true"   icon="fa fa-book"/>
 		        <p:menuitem  value="Autor" action="autor?faces-redirect=true"   icon="fa fa-fw fa-edit"/>
+		        <p:menuitem  value="Vendas" action="vendas?faces-redirect=true"   icon="ui-icon-image"/>
 		  		<p:menuitem  value="Ring" action="ring?faces-redirect=true"    icon="ui-icon-disk"/>
 		  
 		 
 		        <f:facet name="options">
 		            <h:outputText value="Você está logado como: #{sessionScope['usuarioLogado'].email} " style="text-align:center;" />
-		            <p:commandButton  value="Logout" action="#{loginBean.efetuaLogout}" icon="ui-icon-extlink" />
+		            <p:commandButton  value="Logout" action="#{loginBean.efetuaLogout}" icon="ui-icon-singout" />
 		        </f:facet>
 		</p:menubar>
 			    <br/>
