Continuação aula 1- curso 3
Inserindo controle pelo CDI

--- a/WebContent/_template.xhtml
+++ b/WebContent/_template.xhtml
@@ -23,7 +23,9 @@
 		</h1>
 	</div>
 
-	  <p:growl id="messages" autoUpdate="true"/>
+	  <p:growl id="messages">
+	  	<p:autoUpdate/>
+	  </p:growl>
 
 	<h:form rendered="#{usuarioLogado != null}">
 	
