Criado uma tela para Vendas, onde possui ligação com o banco de dados e atualiza o grafico. Criado regras de negocio para validação de exclusao com chave constraint na tela autor e livro

--- a/WebContent/carousel.xhtml
+++ b/WebContent/carousel.xhtml
@@ -30,7 +30,7 @@
 						
 						<h:outputText value="Preço:"/>
 						<h:outputText value="#{livro.preco}">
-						<f:convertNumber type="currenty" pattern="R$ 0.00"
+						<f:convertNumber type="currency" pattern="R$ 0.00"
 							currencySymbol="R$" locale="pt_BR" />
 							</h:outputText>
 						
